# llm-pipeline

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: test.yml
deployment/: Dockerfile
deployment/helm/llm-pipeline/: Chart.yaml  values.yaml
deployment/helm/llm-pipeline/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  pvc.yaml  service.yaml
deployment/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  pvc.yaml  service.yaml
src/llm_pipeline/: __init__.py  cli.py
src/llm_pipeline/adapters/: __init__.py  adapter_manager.py  dora.py  lora.py  merging.py  rslora.py
src/llm_pipeline/core/: __init__.py  base_module.py  config.py  model_wrapper.py  registry.py
src/llm_pipeline/data/: __init__.py  curriculum.py  memmap.py  minhash.py  rft.py  streaming.py  synth.py
src/llm_pipeline/evaluation/: __init__.py  calibration.py  callbacks.py  diversity.py  judge.py  needle_in_haystack.py  perplexity.py
src/llm_pipeline/evaluation/benchmarks/: __init__.py  gsm8k.py  humaneval.py  ifeval.py  mmlu.py
src/llm_pipeline/inference/: __init__.py  advanced_sampling.py  batching.py  constraints.py  continuous_batching.py  kv_cache.py  paged_attention.py  qwen3_engine.py  sampling.py  speculative.py  speculative_kernel.py  streaming.py
src/llm_pipeline/inference/attention/: __init__.py  config.py  flash_attention.py  flash_attention_3.py  sliding_window.py  sparse.py
src/llm_pipeline/inference/caching/: __init__.py  prefix_cache.py
src/llm_pipeline/inference/core/: __init__.py  batch_processor.py  context_manager.py  engine.py  kv_cache.py  memory_manager.py
src/llm_pipeline/inference/generation/: __init__.py  beam_search.py  constraints.py  sampling.py  streaming.py
src/llm_pipeline/inference/merging/: __init__.py  base_merger.py  cache_manager.py  full_precision_merger.py  quantized_merger.py  strategy_selector.py
src/llm_pipeline/merging/: __init__.py
src/llm_pipeline/merging/composition/: __init__.py  sequential.py
src/llm_pipeline/merging/quality/: __init__.py  evaluator.py
src/llm_pipeline/merging/strategies/: __init__.py  dare.py  linear.py  task_arithmetic.py  ties.py
src/llm_pipeline/mlops/: __init__.py  checkpointing.py  manifest.py  seeds.py  sweeps.py  tracking.py
src/llm_pipeline/models/: __init__.py  moe.py
src/llm_pipeline/models/generic/: __init__.py  transformers_wrapper.py
src/llm_pipeline/models/qwen3/: __init__.py  config.py  custom_builder.py  custom_loader.py  factory.py
src/llm_pipeline/models/qwen3_5/: __init__.py  attention.py  config.py  decoder_layer.py  gated_deltanet.py  loader.py  mlp.py  model.py  mtp.py  rotary.py  vision.py
src/llm_pipeline/parallelism/: __init__.py  base.py  expert_parallel.py  factory.py  registry.py  tensor_parallel.py
src/llm_pipeline/parallelism/communication/: __init__.py  nccl_tuner.py  parallel_linear.py  patterns.py  primitives.py
src/llm_pipeline/parallelism/strategies/: __init__.py  tensor_parallel.py
src/llm_pipeline/production/: __init__.py
src/llm_pipeline/production/deployment/: Dockerfile  __init__.py
src/llm_pipeline/production/monitoring/: __init__.py  metrics.py
src/llm_pipeline/production/registry/: __init__.py  lifecycle.py
src/llm_pipeline/production/serving/: __init__.py  auth.py  lora_router.py  multi_model.py  queue.py  schemas.py  server.py  tool_calling.py
src/llm_pipeline/quantization/: __init__.py  configs.py  dynamic.py  fp_low.py  gguf_writer.py  quant_utils.py  quantizer.py
src/llm_pipeline/quantization/inference/: __init__.py  configs.py  deployment.py  gguf.py  onnx.py  ptq.py  tensorrt.py
src/llm_pipeline/quantization/kernels/: __init__.py  triton_fp8.py  triton_iq4_nl.py  triton_mxfp4.py  triton_q4_k.py  triton_q5_k.py  triton_q6_k.py  triton_q8_k.py  triton_rmsnorm.py  triton_rope.py  triton_softmax.py
src/llm_pipeline/quantization/kquants/: __init__.py  _outlier_common.py  imatrix.py  iq4.py  iq4_xs.py  iq_low.py  methods.py  q3_k.py  q3_k_out.py  q4_k.py  q4_k_out.py  q5_k.py  q5_k_out.py  q6_k.py  q6_k_out.py  q8_k.py
src/llm_pipeline/quantization/training/: __init__.py  aqlm_integration.py  bnb_integration.py  loftq.py
src/llm_pipeline/testing/: __init__.py  conftest.py
src/llm_pipeline/testing/integration/: __init__.py  test_lora_injection.py  test_qwen3_full_pipeline.py
src/llm_pipeline/testing/unit/: test_adapter_merging.py  test_advanced_sampling.py  test_constraints.py  test_continuous_batching_stress.py  test_cuda_graph_path.py  test_curriculum.py  test_data_pipeline.py  test_distillation.py  test_dpo.py  test_evaluation.py  test_expert_parallel.py  test_gated_deltanet.py  test_gated_deltanet_chunk.py  test_gguf_writer.py  test_grpo.py  test_imports.py  test_inference_engine.py  test_kernels_low_level.py  test_kquants.py  test_lora_core.py  test_lora_router.py  test_merging_strategies.py  test_mlops.py  test_model_registry.py  test_moe.py  test_muon.py  test_orpo_kto.py  test_outlier_extensions.py  test_ppo.py  test_q3k.py  test_q4_k_out.py  test_q5k_and_dynamic.py  test_qkx3.py  test_quant_beyond.py  test_quantization.py  test_qwen3_5_attention.py  test_qwen3_5_config.py  test_qwen3_5_loader.py  test_qwen3_5_model.py  test_qwen3_5_mtp.py  (+14 more)
src/llm_pipeline/training/: __init__.py  checkpointing.py  compile.py  loggers.py  optim_offload.py  trainer.py
src/llm_pipeline/training/modes/: __init__.py  distillation.py  dpo.py  grpo.py  kto.py  orpo.py  ppo.py  reward_model.py  sft.py
src/llm_pipeline/training/optimization/: __init__.py  optimizer.py  scheduler.py
src/llm_pipeline/training/optimization/optimizers/: __init__.py  muon.py
src/llm_pipeline/utils/: __init__.py  analysis.py  factory.py  memory.py  optimizer_memory.py  padding.py  validation.py
