[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-pipeline"
version = "0.1.0"
authors = [
    {name = "David Akinpelu", email = "Akinpeluakorede01@gmail.com"},
]
description = "Educational end-to-end PyTorch toolkit for studying how modern LLM training, inference, quantization, and serving work"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["machine-learning", "pytorch", "lora", "fine-tuning", "quantization", "tensor-parallelism", "inference", "serving"]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "tokenizers>=0.14.0",
    "datasets>=2.14.0",
    "safetensors>=0.4.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
quantization = [
    "bitsandbytes>=0.41.0",
    "aqlm>=0.1.0",
    "scipy>=1.11.0",
    # triton ships bundled with torch on CUDA Linux wheels but not on CPU-only
    # or macOS torch — list it explicitly so the educational K-quant kernels
    # under quantization/kernels/ are available wherever pip can find a wheel.
    "triton>=2.1.0; platform_system == 'Linux'",
]
serving = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "prometheus-client>=0.19",
    "pydantic>=2.0",
]
# Optional logging backends. Each is soft-imported in training/loggers.py;
# install only the one(s) you actually use.
loggers = [
    "wandb>=0.16",
    "mlflow>=2.10",
    "tensorboard>=2.15",
]
# Flash-attention is only published as a built wheel for specific torch+CUDA
# combinations and requires `--no-build-isolation`. Keeping it out of any
# default extra so `pip install` doesn't trigger a long source build for
# users who don't need it. See README for install instructions.
flash = [
    "ninja",
]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    # flake8 itself doesn't read pyproject.toml; this plugin makes [tool.flake8]
    # below actually take effect.
    "Flake8-pyproject>=1.2.3",
    "mypy>=1.5.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]

[project.scripts]
llm-pipeline = "llm_pipeline.cli:main"

[project.urls]
Homepage = "https://github.com/DavidAkinpelu/llm-pipeline"
Repository = "https://github.com/DavidAkinpelu/llm-pipeline"
Issues = "https://github.com/DavidAkinpelu/llm-pipeline/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
strict_equality = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
    "*.egg",
]
